--- a/css/widgets/cockpit/steps-rail.css
+++ b/css/widgets/cockpit/steps-rail.css
@@ -87,7 +87,7 @@
 .cockpit-connector-line {
   position: absolute;
   top: 0;
-  left: calc(var(--spacing-16) + 3.5px);
+  left: calc(var(--spacing-16) + 3px);
   width: 1px;
   height: 340px;
   background-image: repeating-linear-gradient(
